Fixed some "Team Profile" issues - "Save" button does not overlap the "Add Member" dropdown on mobile devices - Member name does not overlap "Edit" button

--- a/components/page/team-details/TeamMembers/components/TeamMembersAdd/components/MemberMultiSelect/MemberMultiSelect.module.scss
+++ b/components/page/team-details/TeamMembers/components/TeamMembersAdd/components/MemberMultiSelect/MemberMultiSelect.module.scss
@@ -102,7 +102,7 @@
     0 10px 20px -5px rgba(14, 15, 17, 0.06),
     0 20px 65px -5px rgba(14, 15, 17, 0.06);
   overflow: hidden;
-  z-index: 10;
+  z-index: 12;
 }
 
 // Search
